--- a/src/css/module/footer.css
+++ b/src/css/module/footer.css
@@ -1,9 +1,13 @@
 .footerWrapper{
+	position: fixed;
+	left: 0;
+	bottom: 0;
     background-color: #4c4c4c;
     width: 100%;
     margin-top: 200px;
 }
 .footerWrapper .pageFooter{
+
 	width: 1000px;
 	height: 120px;
 	line-height: 120px;
